misc, gamerules, indexes

--- a/misc/Calander.html
+++ b/misc/Calander.html
@@ -26,97 +26,116 @@
 <div class="book">
 <h3 class="articletitle">Eyomic Calander</h3>
 <article>
-<p>The most commonly used Calander in Eyom is the Farmer's Talley, also known as Silva's Calander. It was established by Emperor Silva the First and spread by the First Sylvin Empire as their power spread across the contenent. While all nations have their own calanders, the Farmer's Talley is almsot universaly understood, making it the primary choice for international and buisness use.</p>
-<p>The Farmer's Talley is a seasonal Calander, paying no mind to the hours in a day. The Calander's time keeping is solar noon to solar noon, and has been arranged to keep the seasons consistant. The calnder divides the year into 12 months, each with 4 weeks split into 5 days.</p>
-<p>The Farmer's Talley is best known for having its year change occure at harvest time. Its zero year is the year the city of Kingsmead (the orgional Silvin Capitol and first human city built Post Irisian War) was compleated. While Sylvin centric, this data is founded in the concept of this being arround the time civilization could thrive on Eyom once more and is used by several calanders.</p>
+	<p>The most commonly used Calendar in Eyom is the Farmer's Talley, also known as Silva's Calendar. It was established by Emperor Silva the First and spread by the First Sylvin Empire as their power spread across the continent. While all nations have their own calendars, the Farmer's Talley is almost universally understood, making it the primary choice for international and business use.</p>
+	<p>The Farmer's Talley is a seasonal Calendar, paying no mind to the hours in a day. The Calendar's time keeping is solar noon to solar noon, and has been arranged to keep the seasons consistent. The calendar divides the year into 12 months, each with 5 weeks split into 6 days for a total of 30 days each month.</p>
+	<p>The Farmer's Talley is best known for having its year change occurs at harvest time. Its zero year is the year the city of Kingsmead (the original Sylvin Capitol and first human city built Post Irisian War) was compleated. While Sylvin centric, this data is founded in the concept of this being around the time civilization could thrive on Eyom once more and is used by several calendars.</p>
 
-<h4 class="articlesubtitle"><span id="PatronArcana">Months</span></h4>
-<p>The months of the Farmer's Talley are:</p>
-<ol>
-	<li>Full Harvest</li>
-	<li>Frost Fall</li>
-	<li>Longdark</li>
-	<li>Newlight</li>
-	<li>Eweing</li>
-	<li>Half Sowing</li>
-	<li>Full Sowing</li>
-	<li>Gentlesun</li>
-	<li>Highsun</li>
-	<li>Longwheat</li>
-	<li>Toolmend</li>
-	<li>Halfharvest</li>
-</ol>
+	<h4 class="articlesubtitle"><span id="PatronArcana">Months</span></h4>
+	<p>The months of the Farmer's Talley are:</p>
+	<ol>
+	    <li>Full Harvest</li>
+	    <li>Frost Fall</li>
+	    <li>Longdark</li>
+	    <li>Newlight</li>
+	    <li>Eweing</li>
+	    <li>Half Sowing</li>
+	    <li>Full Sowing</li>
+	    <li>Gentlesun</li>
+	    <li>Highsun</li>
+	    <li>Longwheat</li>
+	    <li>Toolmend</li>
+	    <li>Halfharvest</li>
+	</ol>
+
+<h4 class="articlesubtitle"><span id="PatronArcana">Days</span></h4>
+<p>The Farmer's Count's days are named (in order), O, Mu, Ga, Pe, Nano, and Beqi. These are simply the numbers 1-6 in the ancient Zoman language. This lack of day names allows for the efficient if inelegant grid-based date mapping system wherein one can use four numbers to designate any date.</p>
+<p>For example, rather than saying or writing "the 15th of Frost Fall in the year 2000" the Farmer's Count allows for "3-3-2-2000" to be used as a means of determining the date. This system works as follows: day - week - month - year. Day 3, week 3 is always the 15th day of the month on the Eyomic Calendar as the months do not change in length, hence, why this can function as it does.</p>
 
 <h4 class="articlesubtitle"><span id="Material_Plane">Star Gifts</span></h4>
-<p>The Farmer's Talley, being a seaosnal calander, is usefull for understanding the phenominon commonly known as Star Gifts. Star Gifts being a mystical force which individuals gain access to a few months to a year after they mentaly mature (Whenever such an event takes place). This attunes the individual to one of the Star Gifts, thus granting the ability associated with their specific Gift by forces yet unknown.</p>.
-<p>The Farmer's Tally was in part designed to ensure the varrious Star Gift's associated stellar arangments are in the same posisions in the sky at the same time of year on a year to year basis. As a result of this practice (orgionaly intended to assist with divination) Eyomic peoples tend to celebrate adults lives not on the date of their birth, but on the date an individual gained their Star Gift. This date is known as each individual with a Gift knows the exact night they gained it, as each year on that night they are blessed with peace, good fortune, and a generaly great mood.</p>
+<p>The Farmer's Talley, being a seasonal calendar, is useful for understanding the phenomenon commonly known as Star Gifts. Star Gifts being a mystical force which individuals gain access to a few months to a year after they mentaly mature (Whenever such an event takes place). This attunes the individual to one of the Star Gifts, thus granting the ability associated with their specific Gift by forces yet unknown.</p>.
+<p>The Farmer's Tally was in part designed to ensure the various Star Gift's associated stellar arrangements are in the same positions in the sky at the same time of year on a year to year basis. As a result of this practice (originally intended to assist with divination) Eyomic peoples tend to celebrate adults lives not on the date of their birth, but on the date an individual gained their Star Gift. This date is known as each individual with a Gift knows the exact night they gained it, as each year on that night they are blessed with peace, good fortune, and a generally great mood.</p>
 <p>A list of what abilities and powers are granted in a given month, and which months belong to which Stellar Season follow:</p>
 <ol>
-	<li><b>Void Sky - Fall / Spring</b></li>
-	<ol style="list-style-type: none;">
+    <li><b>Void Sky - Fall / Spring</b></li>
+    <ol style="list-style-type: none;">
 
-		<br>
-		<li>Those who come of age under the Void Sky gain magical abilities which relate to altering themsleves, or the world arround them.</li>
-		<br>
-		<li><i>Full Harvest</i></li>
-		<ol style="list-style-type: none;">
-			<li>Those who come of age in Full Harvest gain one of the abilities commonly refered to as <a href="https://www.d20pfsrd.com/classes/hybrid-classes/slayer/slayer-talents/">Slayer's Talents</a>. Many of them go on to become professional Monster Slayers.</li>
-		</ol>
-		<li><i>Half Sowing</i></li>
-			<ol style="list-style-type: none;">
-				<li>Those who come of age durring Half Sewing gain the knolage and ability to create a single alchemical <a href="https://www.d20pfsrd.com/classes/base-classes/alchemist#TOC-Mutagen-Su-">mutagen</a>.</li>
-			</ol>
-		<li><i>Full Sowing</i></li>
-			<ol style="list-style-type: none;">
-				<li>Those who come of age in Full Harvest gain one of the abilities commonly refered to as <a href="https://www.d20pfsrd.com/classes/base-classes/Vigilante/#TOC-Vigilante-Specialization-Ex-">Vigilante Talents</a>. They often become adventurers.</li>
-			</ol>
-		<li><i>Halfharvest</i></li>
-		<ol style="list-style-type: none;">
-			<li>Those who come of age in Halfharvest gain the knoalge needed to produce a single <a href="https://www.d20pfsrd.com/classes/base-classes/Alchemist/#TOC-Alchemy-Su-">alchemist's extract</a>. They often become alchemists.</li>
-		</ol>
-	</ol>
-	<br>
-	<li><b>Living Sky - Winter</b></li>
-	<br>
-	<ol style="list-style-type: none;">
-		<li>Those who come of age under the Living Sky gain the ability to cast a single spell of the third energy level, or three spells of the first energy level, once per day. Mages with this gift can also cast other spells of these schools at one energy level greater than their peers. This ability is their own, with the power coming from within. The spells they gain through this gift come from diffrent schools depending on the month.</li>
-		<br>
-	</ol>
-		<ol style="list-style-type: none;">
-			<li><i>Frost Fall:</i> Enchantment, Divination</li>
-			<li><i>Longdark:</i> Illusion, Transmutation</li>
-			<li><i>Newlight:</i> Conjuration, Abjuration</li>
-			<li><i>Eweing:</i> Necromancy, Evocation</li>
-		</ol>
-		<br>
-	<li><b>Dead Sky - Summer</b></li>
-	<br>
-	<ol style="list-style-type: none;">
-		<li>Those who come of Age under the Dead Sky gain knolage and abilities which augment their physical capabilities. This power comes from within and is entirly physicla in anture, though the granting of it is a magical event.</li>
-		<br>
-			<li><i>Gentlesun</i></li>
-		<ol style="list-style-type: none;">
-			<li>Those who come of age durring Gentlesun are swifter than most, and can navigate through / over exceptionaly rough terrain and even through magical effects <a href="https://www.d20pfsrd.com/magic/all-spells/f/freedom-of-movement/">without being slowed or hindered</a>, though this will tire them after a few minutes.</li>
-		</ol>
-		<li><i>Highsun</i></li>
-		<ol style="list-style-type: none;">
-			<li>Those who come of age in Highsun magicaly gain the mental and physical knolage to preform one of the many <a href="https://www.d20pfsrd.com/feats/combat-feats/">martial tecniques</a>.</li>
-		</ol>
-		<li><i>Longwheat</i></li>
-		<ol style="list-style-type: none;">
-			<li>Those who come of age in Longwheat magicaly gain the mental and physical knolage nessisary to work with others in a specific <a href="https://www.d20pfsrd.com/feats/teamwork-feats/">taticaly usefull</a> way.</li>
-		</ol>
-		<li><i>Toolmend</i></li>
-		<ol style="list-style-type: none;">
-			<li>Those who come of age in Toolmend gain the extrordianry to <a href="https://www.d20pfsrd.com/magic/all-spells/m/make-whole/">fix absolutly anything</a>, given the time needed to do so. This ability is not magical, but does seem to grant the knolage needed to make the repair and induce a trance-like state. Once finished, the individual is exceptionaly tired and hungry.</li>
-		</ol>
-	</ol>
+   	 <br>
+   	 <li>Those who come of age under the Void Sky gain magical abilities which relate to altering themselves, or the world around them.</li>
+   	 <br>
+   	 <li><i>Full Harvest</i></li>
+   	 <ol style="list-style-type: none;">
+   		 <li>Those who come of age in Full Harvest gain one of the abilities commonly referred to as <a href="https://www.d20pfsrd.com/classes/hybrid-classes/slayer/slayer-talents/">Slayer's Talents</a>. Many of them go on to become professional Monster Slayers.</li>
+   	 </ol>
+   	 <li><i>Half Sowing</i></li>
+   		 <ol style="list-style-type: none;">
+   			 <li>Those who come of age during Half Sewing gain the knowledge and ability to create a single alchemical <a href="https://www.d20pfsrd.com/classes/base-classes/alchemist#TOC-Mutagen-Su-">mutagen</a>.</li>
+   		 </ol>
+   	 <li><i>Full Sowing</i></li>
+   		 <ol style="list-style-type: none;">
+   			 <li>Those who come of age in Full Harvest gain one of the abilities commonly referred to as <a href="https://www.d20pfsrd.com/classes/base-classes/Vigilante/#TOC-Vigilante-Specialization-Ex-">Vigilante Talents</a>. They often become adventurers.</li>
+   		 </ol>
+   	 <li><i>Halfharvest</i></li>
+   	 <ol style="list-style-type: none;">
+   		 <li>Those who come of age in Halfharvest gain the knowledge needed to produce a single <a href="https://www.d20pfsrd.com/classes/base-classes/Alchemist/#TOC-Alchemy-Su-">alchemist's extract</a>. They often become alchemists.</li>
+   	 </ol>
+    </ol>
+    <br>
+    <li><b>Living Sky - Winter</b></li>
+    <br>
+    <ol style="list-style-type: none;">
+   	 <li>Those who come of age under the Living Sky gain the ability to cast a single spell of the third energy level, or three spells of the first energy level, once per day. Mages with this gift can also cast other spells of these schools at one energy level greater than their peers. This ability is their own, with the power coming from within. The spells they gain through this gift come from different schools depending on the month.</li>
+   	 <br>
+    </ol>
+   	 <ol style="list-style-type: none;">
+   		 <li><i>Frost Fall:</i> Enchantment, Divination</li>
+   		 <li><i>Longdark:</i> Illusion, Transmutation</li>
+   		 <li><i>Newlight:</i> Conjuration, Abjuration</li>
+   		 <li><i>Eweing:</i> Necromancy, Evocation</li>
+   	 </ol>
+   	 <br>
+    <li><b>Dead Sky - Summer</b></li>
+    <br>
+    <ol style="list-style-type: none;">
+   	 <li>Those who come of Age under the Dead Sky gain knowledge and abilities which augment their physical capabilities. This power comes from within and is entirely physical in nature, though the granting of it is a magical event.</li>
+   	 <br>
+   		 <li><i>Gentlesun</i></li>
+   	 <ol style="list-style-type: none;">
+   		 <li>Those who come of age during Gentlesun are swifter than most, and can navigate through / over exceptionaly rough terrain and even through magical effects <a href="https://www.d20pfsrd.com/magic/all-spells/f/freedom-of-movement/">without being slowed or hindered</a>, though this will tire them after a few minutes.</li>
+   	 </ol>
+   	 <li><i>Highsun</i></li>
+   	 <ol style="list-style-type: none;">
+   		 <li>Those who come of age in Highsun magically gain the mental and physical knowledge to preform one of the many <a href="https://www.d20pfsrd.com/feats/combat-feats/">martial techniques</a>.</li>
+   	 </ol>
+   	 <li><i>Longwheat</i></li>
+   	 <ol style="list-style-type: none;">
+   		 <li>Those who come of age in Longwheat magically gain the mental and physical knowledge necessary to work with others in a specific <a href="https://www.d20pfsrd.com/feats/teamwork-feats/">taticaly usefull</a> way.</li>
+   	 </ol>
+   	 <li><i>Toolmend</i></li>
+   	 <ol style="list-style-type: none;">
+   		 <li>Those who come of age in Toolmend gain the extrordianry to <a href="https://www.d20pfsrd.com/magic/all-spells/m/make-whole/">fix absolutly anything</a>, given the time needed to do so. This ability is not magical, but does seem to grant the knowledge needed to make the repair and induce a trance-like state. Once finished, the individual is exceptionally tired and hungry.</li>
+   	 </ol>
+    </ol>
 </ol>
 
 <h4 class="articlesubtitle"><span id="Material_Plane">The Skies</span></h4>
-<p>The three skies, Living, Dead, and Void are how Eyomic Peoples represent the three Stellar Phases of the year. The Living Sky occures durring winter on Eyom, and is when the night sky is filled with multi-colored and everchanging points of shifting, impossibly distant, magical light. It is seen as a time of thought and inner change by the people of Eyom.</p>
-<p>The Dead Sky represents the time of year in which the 42 isolated, static, white stars of the summer sky are the sole lights of the night sky, always visible in their fixed posisions. As with all cultures, this time of year makrs for easy navigation, and is beloved by scholar-mages due to the lower flux of stellar energies. For the people of Eyom, it respresents a time of self improvment through physical means, a time to reflct on the inner world.</p>
-<p>The Void Sky refers to the transision piriods between the Living and Dead sky which occure durring spring and fall. This time of year sees no stars in the sky and is seen as a time where the fates hold less sway and that which is ordained might be bent or broken by those strong of will.</p>
+<p>The three skies, Living, Dead, and Void are how Eyomic Peoples represent the three Stellar Phases of the year. The Living Sky occurs during winter on Eyom, and is when the night sky is filled with multi-colored and ever changing points of shifting, impossibly distant, magical light. It is seen as a time of thought and inner change by the people of Eyom.</p>
+<p>The Dead Sky represents the time of year in which the 42 isolated, static, white stars of the summer sky are the sole lights of the night sky, always visible in their fixed positions. As with all cultures, this time of year makes for easy navigation, and is beloved by scholar-mages due to the lower flux of stellar energies. For the people of Eyom, it represents a time of self improvement through physical means, a time to reflect on the inner world.</p>
+<p>The Void Sky refers to the transition periods between the Living and Dead sky which occur during spring and fall. This time of year sees no stars in the sky and is seen as a time where the fates hold less sway and that which is ordained might be bent or broken by those strong of will.</p>
+
+<h4 class="articlesubtitle"><span id="Material_Plane">Time Zones</span></h4>
+
+<figure style="width: 60%;" class="left">
+<figcaption  class="basic"><b>A map of Eyom's Time Zones.</b></figcaption>
+<img style="width:100%" title="A map of Eyom's Time Zones." src="..\img\maps\EyomTimeZones.jpeg" alt="A map of Eyom's Time Zones." />
+</figure>
+
+<p>Eyom's citizens felt the need to create large zones with synchronized clock time, regardless of solar time. This was due to their expansive railway network, which made it possible to travel and do business rapidly, and across vast distances. As this concept is unique and related to the passing and tracking of time, it is being detailed here on their callender's page.</p>
+<p>The time zones work by adjusting clocks incrementally one hour forwards (if moving west 15) degrees, and one hour back if moving east 15 degrees. Each set of 15 degrees incurs another hour of change. In theory, if one were to reach the opposite side of the world as the Illia Time Zone, the count would invert.</p>
+<p>There are seven time zones, Constructi, Titan's, Illia, Dalandic, Merchant's, Western, and True Time. True Time, despite the name, is simply what Wood Elves chose to call the time zone established for their territories as their capitol rests almost on the center of the Illia Time Zone, and they refused to have their holdings on a different time. In effect, they chose not to participate in so far as dividing their territory across times, but respect all other boundaries.</p>
+<p>The zones are not even 15 degree slices of the world due to many factors, some political, some translation errors, some simply misunderstanding the concept. Most lines wrap around borders, allowing allies to share time with one another, and creating barriers of separation between rivals and enemies. Or, in the case of the Warrenese, sub dividing one's own territory in 15 minute intervals because clearly that is what this temporal gradient mapped to longitudinal distance was all about.</p>
+<p>As if this wasn't enough confusion relating to time, the Time Zone system includes support for a practice of the northernmost folk of the world. As their winters are dark and long, those living above what is called the "Winter Boundary Line" (which rests at 40 degrees N latitude) set their clocks back 4 hours from the start of Frostfall, to the end of Ewing. They then pretend the day starts and stops this 4 hours earlier than it does, entirely ignoring solar noon and lunar midnight. This practice is formally recognised within the Time Zone system, hence in winter if it is 3 pm in Illia Time, it will be 6 pm in Western Time, unless you're 40 degrees or more north, in which case it is 11 am, and 2 am respectively.</p>
+
+
 
 
 <script>
