--- a/misc/Magic.html
+++ b/misc/Magic.html
@@ -13,15 +13,15 @@
 <script src="../nav.js"></script>
 </div>
 <div class="mediacontrol">
-	<script src="../scripts/tts.js"></script>
-	<img style="width: 90%; margin-top: 20px; display: block; margin-left: auto; margin-right: auto; margin-bottom: 3px;" src="../img/speaker.png">
-	<img id="vactube" style="width: 70%; display: block; margin-left: auto; margin-right: auto;" src="../img/vacumetube.png">
-	<div style="margin: auto; padding-left: 16%;">
-    <button class="mediacontrollbutton" id=play></button>
-    <button class="mediacontrollbutton" id=pause></button>
-    <button class="mediacontrollbutton" id=stop></button>
-	</div>
-	
+    <script src="../scripts/tts.js"></script>
+    <img style="width: 90%; margin-top: 20px; display: block; margin-left: auto; margin-right: auto; margin-bottom: 3px;" src="../img/speaker.png">
+    <img id="vactube" style="width: 70%; display: block; margin-left: auto; margin-right: auto;" src="../img/vacumetube.png">
+    <div style="margin: auto; padding-left: 16%;">
+	<button class="mediacontrollbutton" id=play></button>
+	<button class="mediacontrollbutton" id=pause></button>
+	<button class="mediacontrollbutton" id=stop></button>
+    </div>
+
 </div>
 <br>
 <div class="book">
@@ -80,8 +80,8 @@
 </div>
 <h4 class="articlesubtitle"><span id="Material_Plane">Populous Arcana</span></h4>
 <p>Populous Arcana is the mechanism unique to Eyom where groups of souls in close proximity create a harmonic resonance field of tremendous energy, though limited in power. Most of Eyom's settlements possess such a field, each attuned to a specific school of magic based on the settlement's history, members, and geography. These fields are somewhat temperamental if left in their natural state, and are also easily disrupted simply by trying to draw more energy from them in one moment than they can supply. A series of theological rituals and ancient arcane wards are employed by each town (often through the employment of Civil Monks) to "cultivate" the town's aura into a more hearty, robust, and useful form.</p>
-<p>Once an aura is cultivated, a specific talisman is required to attune to it. These talismans are usable in any other town with an aura of the identical energy type, thus most travelers will simply purchase a matched set of charms for their journies. Each charm can funnel power either to magical items, or to a single individual. The tap is direct, and allows the user to cast spells, preform spell-effects, or otherwise draw on magical energy up to the limits of the field. Attempts to overdraw simply disable the talisman (Which will need to be reset by the user).</p>
-<p>The most interesting aspect of this method of harnessing magical power is it is infinite. A town's aura may only support second level spells, but a caster attuned to it can cast as many second level spells as they wish back to back. <i>(<b>Imperial Warning:</b> Criminally minded enterprising individuals are warned that while your mana pool is functionally bottomless in Eyomic towns, so too are those of the guards. And the citizens. Additionally, the wilds of Eyom are home to things far more cunning and dangerous than a mere mortal caster. Lastly, the town guards can disable your talisman remotely if necessary.)</i> Many communities take measures to ensure more destructive spells can only be used by guards, government officials, and military personnel. This is possible due to the talismans being able to limit the energy level they provide. Tinkering to bypass these restrictions tends to destroy the Talismin.</p>
+<p>Once an aura is cultivated, a specific talisman is required to attune to it. These talismans are usable in any other town with an aura of the identical energy type, thus most travelers will simply purchase a matched set of charms for their journeys. Each charm can funnel power either to magical items, or to a single individual. The tap is direct, and allows the user to cast spells, preform spell-effects, or otherwise draw on magical energy up to the limits of the field. Attempts to overdraw simply disable the talisman (Which will need to be reset by the user).</p>
+<p>The most interesting aspect of this method of harnessing magical power is it is infinite. A town's aura may only support second level spells, but a caster attuned to it can cast as many second level spells as they wish back to back. <i>(<b>Imperial Warning:</b> Criminally minded enterprising individuals are warned that while your mana pool is functionally bottomless in Eyomic towns, so too are those of the guards. And the citizens. Additionally, the wilds of Eyom are home to things far more cunning and dangerous than a mere mortal caster. Lastly, the town guards can disable your talisman remotely if necessary.)</i> Many communities take measures to ensure more destructive spells can only be used by guards, government officials, and military personnel. This is possible due to the talismans being able to limit the energy level they provide. Tinkering to bypass these restrictions tends to destroy the Talisman.</p>
 <p>Town Aura energy supplies are dependent on certain population thresholds being met. The curve these thresholds follow is based on the following equation:</p>
 <div style="background: rgba(108, 98, 71, 0.34) none repeat scroll 0 0; border: solid #4F120B; border-width: 2px; width:-webkit-fit-content; width:-moz-fit-content; margin-left: auto; margin-right: auto;">
 <p style="text-align:center; padding-left: 15px; padding-right: 15px;">Y=68184420000+(1612.393 - 68184420000)/(1 +(x/79.2951)<sup>5.11557</sup>)</p>
@@ -134,10 +134,10 @@
 </tbody>
 </table>
 <h4 class="articlesubtitle"><span id="Material_Plane">Totem Arcana</span></h4>
-<p>Totem Arcana is the most common source of magical energy in Eyom, in spite of the existence of Populous Arcana. Totem Arcana utilities specially crafted totems which gather energy from varrious natural sources such as the moon, the stars, the mantle, and the natural ambient arcane field. Totems collect, store, and concentrate these energies at different rates depending on their specific makeup and design. A charged totem is able to transmit stored power to a talisman which has been attuned to it, thereby providing magical energy to an enchanted item.</p>
+<p>Totem Arcana is the most common source of magical energy in Eyom, in spite of the existence of Populous Arcana. Totem Arcana utilities specially crafted totems which gather energy from various natural sources such as the moon, the stars, the mantle, and the natural ambient arcane field. Totems collect, store, and concentrate these energies at different rates depending on their specific makeup and design. A charged totem is able to transmit stored power to a talisman which has been attuned to it, thereby providing magical energy to an enchanted item.</p>
 <p>Totems are not able to give power directly to individuals, nor can their power be refined at the totem or by an individual to produce a specific spell-effect. Each user of a totem requires a talisman for each spell they wish to use. This talisman will take the raw energies from the totem, convert them as needed, shape them, and then cast their spell, or activate their effect, as the user's will.</p>
 <p>Totems have a few obvious drawbacks. Totems are finite reservoirs of magic, and require periods of charging between uses. Totems can only store so much magic at a given time, meaning one cannot simply let a totem sit for a year and then cast continuously for days on end. Totems are also somewhat bulky and difficult to move, often requiring a small two-wheeled cart to move if they support spells in excess of 8th level or have a particular large broadcast range. Totems are also limited in their range, and can only transmit power so far. This necessitates totem users take their totems into the field, and generally for them to have two or three totems for the sake of constant magic output. Additionally, managing the many talismans needed to have access to a wide array of spells can be cumbersome.</p>
-<p>Many may wonder why is Totem Arcana the most common form of magic within Eyom, given the serious drawbacks. The answer is simple. Patrons prices can be far steeper than a simple purse of gold and needing to pull a cart through the woods once in a while. Patrons do not like having more than a few Dependents each (with some exceptions), and no institution could provide for all its magical needs via even a handful of patrons. Since taking a number of people into the field sufficient to use Populous Arcana is simply impractical at best, Totem Arcana is the only way one can reasonably obtain access to spells and spell-effects in the wilds of Eyom. Aside that is from enchanted items, as most of them can power themselves <i>(<b>Scholar's Note:</b> Most if not all of Eyom's enchanted items which are not intended to be powered via Populous Arcana have quirks, drawbacks, and design flaws. Most importantly, no two are quite alike. Thus, no group operating in the wilds depends soly on enchanted equipment.)</i></p>
+<p>Many may wonder why is Totem Arcana the most common form of magic within Eyom, given the serious drawbacks. The answer is simple. Patrons prices can be far steeper than a simple purse of gold and needing to pull a cart through the woods once in a while. Patrons do not like having more than a few Dependents each (with some exceptions), and no institution could provide for all its magical needs via even a handful of patrons. Since taking a number of people into the field sufficient to use Populous Arcana is simply impractical at best, Totem Arcana is the only way one can reasonably obtain access to spells and spell-effects in the wilds of Eyom. Aside that is from enchanted items, as most of them can power themselves <i>(<b>Scholar's Note:</b> Most if not all of Eyom's enchanted items which are not intended to be powered via Populous Arcana have quirks, drawbacks, and design flaws. Most importantly, no two are quite alike. Thus, no group operating in the wilds depends solely on enchanted equipment.)</i></p>
 <button type="button" class="collapsible">GM Note</button>
 <div class="content">
 Information on the mechanics behind each of Eyom's magic systems can be found <a href="../gamerules/magicasequipment.html">here</a>.
@@ -148,13 +148,13 @@ var coll = document.getElementsByClassName("collapsible");
 var i;
 for (i = 0; i < coll.length; i++) {
   coll[i].addEventListener("click", function() {
-    this.classList.toggle("active");
-    var content = this.nextElementSibling;
-    if (content.style.maxHeight){
-      content.style.maxHeight = null;
-    } else {
-      content.style.maxHeight = content.scrollHeight + "px";
-    }
+	this.classList.toggle("active");
+	var content = this.nextElementSibling;
+	if (content.style.maxHeight){
+  	content.style.maxHeight = null;
+	} else {
+  	content.style.maxHeight = content.scrollHeight + "px";
+	}
   });
 }
 </script>
