--- a/misc/legendarymonsters.html
+++ b/misc/legendarymonsters.html
@@ -14,8 +14,8 @@
 <br>
 <div class="book">
 <h3 class="articletitle">Legendary Monsters</h3>
-<p>Within the bounds of Eyom lies a particularly dangerous group of monstrous creatures called "Legendary Monsters" by the common folk. The proper scholastic name for these creatures are Remnant Beasts, as each is a remnant of the Irisian War. Legendary Monsters (term used for Eyomian civilian's familiarity's sake) were created by both sides by elevating monsters allready strong enough to pose a dire threat to divine servents and lesser gods to even more deadly forms.</p>
-<p>Durring the war, some Legendary Monsters were cast adrift from time as a means of destroying them. Had time not been broken during the war, this would have been their end. Unfortuantly for the mortals of the modern world, when the Kami repaired time some of these banished Ledgends were caught by the God Wall, and thus imprisoned within Eyom.</p>
+<p>Within the bounds of Eyom lies a particularly dangerous group of monstrous creatures called "Legendary Monsters" by the common folk. The proper scholastic name for these creatures are Remnant Beasts, as each is a remnant of the Irisian War. Legendary Monsters (term used for Eyomic civilian's familiarity's sake) were created by both sides by elevating monsters already strong enough to pose a dire threat to divine servents and lesser gods to even more deadly forms.</p>
+<p>Durring the war, some Legendary Monsters were cast adrift from time as a means of destroying them. Had time not been broken during the war, this would have been their end. Unfortunately for the mortals of the modern world, when the Kami repaired time some of these banished Legends were caught by the God Wall, and thus imprisoned within Eyom.</p>
 <p>Legendary Monsters are dangerous for three primary reasons:</p>
 <ol>
 <li>Their absurd might as a warforged creation of the divines.</li>
@@ -56,7 +56,7 @@
 <ol style="list-style-type: lower-greek;">
 <li>Legends are more intelligent and personable than their kin. They act as any people would, with wants, needs, dreams, and goals.</li>
 <li>Many Legends can be negotiated with, even if their kin could not be.</li>
-<li>Legends are not bound to the general trends of their species. Normaly cruel creatures can be kind as legends, and normaly benevolent monsters may be malevolent.</li>
+<li>Legends are not bound to the general trends of their species. Normally cruel creatures can be kind as legends, and normally benevolent monsters may be malevolent.</li>
 </ol>
 </li>
 </ol>
@@ -68,7 +68,7 @@
 <h5 class="articlesubtitle">Mighty</h5>
 <p>Mighty Legends have existed on Eyom for at least 800 years. They are more dangerous than younger Legends due to a great increase to their personal might. They have the power to heal themselves from the brink of death at least twice, and can unleash a mighty roar infused with magics that can strike people dead from beyond visual range.</p>
 <h5 class="articlesubtitle">Dreaded</h5>
-<p>Dreaded Legends have existed on Eyom for at least 1000 years. They are extremely dangerous due to their ability to know everything occuring within their dominion, possess full control over the weather within their domain, full control over the plants, animals, and people within its domain, as well as possessing the ability to shape the very land upon which they make their home as if it were clay on a potter's wheel.</p>
+<p>Dreaded Legends have existed on Eyom for at least 1000 years. They are extremely dangerous due to their ability to know everything occurring within their dominion, possess full control over the weather within their domain, full control over the plants, animals, and people within its domain, as well as possessing the ability to shape the very land upon which they make their home as if it were clay on a potter's wheel.</p>
 <h5 class="articlesubtitle">Ruinous</h5>
 <p>Ruinous Legends have existed on Eyom for at least 1200 years. They are the most dangerous and powerful Legends with not only the ability to command the land they live within but can exude an aura that simply disintegrates people and objects which are unable to resist their terrible power.</p>
 </div>
@@ -94,13 +94,13 @@ var coll = document.getElementsByClassName("collapsible");
 var i;
 for (i = 0; i < coll.length; i++) {
   coll[i].addEventListener("click", function() {
-    this.classList.toggle("active");
-    var content = this.nextElementSibling;
-    if (content.style.maxHeight){
-      content.style.maxHeight = null;
-    } else {
-      content.style.maxHeight = content.scrollHeight + "px";
-    }
+	this.classList.toggle("active");
+	var content = this.nextElementSibling;
+	if (content.style.maxHeight){
+  	content.style.maxHeight = null;
+	} else {
+  	content.style.maxHeight = content.scrollHeight + "px";
+	}
   });
 }
 </script>
